--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>浙江冠南能源在线监控系统</title>
+    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=250ab89694cdb799b8d07a1f1275f018"></script>
 </head>
 <body>
 <div id="app"></div>
